<resources>
    <string name="app_name">GPA Calculator</string>
    <string name="about_title">GPA Calculator</string>
    <string name="develper">This app is developed by Antonio Shavia.   Version : 1.0</string>
    <string name="how_to_use">How to Use?</string>
    <string name="how">Your cumulative GPA is the score typically used for college applications or workforce. It\'s an average of averages, combining all your semester GPAs into a single, overall GPA.</string>
    <string name="step_by_step_tutorial">Step-by-Step Tutorial</string>
    <string name="check">Check out the list below to follow along and figure out your semester GPA and cumulative GPA.</string>
    <string name="enter_name">Enter your course name</string>
    <string name="enternameinfo">In the first column give each of your courses a name so that you\'ll be able to enter your grades in the proper row(it\'ll look nice too).</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="entergrade">Enter your course grade</string>
    <string name="entercredit">In the second column for each course enter the amount of credit hours you completed during the semester.</string>
    <string name="three">3</string>
    <string name="enter_your_course_credits">Enter your course credits</string>
    <string name="creditinfo">In the third column for each course enter the amount of credit hours you completed during the semester.</string>
    <string name="four">4</string>
    <string name="optional">Add another course (optional)</string>
    <string name="takinga">Taking a heavy course load? Add as many extra classes as you need using the blue \'add course\' button.</string>
    <string name="five">5</string>
    <string name="entercurrenttotal">Enter your current total hour and credit point</string>
    <string name="tocalculategpa">To calculate cumulative GPA previous semesters total hour and credit point required. So, enter your current semesters total hour in the first field below the semester GPA result and enter your current credit point in the second field.</string>
    <string name="courses_title">Courses</string>
    <string name="c_hours">C_Hours</string>
    <string name="grades">Grades</string>
    <string name="course_1">Course 1</string>
    <string name="num5_5">5</string>
    <string name="course_2">Course 2</string>
    <string name="num4_5">5</string>
    <string name="course_3">Course 3</string>
    <string name="num3_5">5</string>
    <string name="course_4">Course 4</string>
    <string name="num2_5">5</string>
    <string name="course_5">Course 5</string>
    <string name="num_5">5</string>
    <string name="course_6">Course 6</string>
    <string name="zero1">0</string>
    <string name="course_7">Course 7</string>
    <string name="zero2">0</string>
    <string name="course_8">Course 8</string>
    <string name="zero3">0</string>
    <string name="course_9">Course 9</string>
    <string name="zero4">0</string>
    <string name="cleare">Cleare</string>
    <string name="add_course">add course</string>
    <string name="calculate">Calculate</string>
    <string name="semester_hrs">Semester Hrs</string>
    <string name="semhrs">0.00</string>
    <string name="semester_cps">Semester Cps</string>
    <string name="semcps">0.00</string>
    <string name="semester_gpa">Semester GPA</string>
    <string name="semgps">0.00</string>
    <string name="usetheabove">Use the above semester result to calculate cummulative gpa and fill the following fields.</string>
    <string name="curenttotalhr">Current total Hrs</string>
    <string name="current_total_cps">Current total Cps</string>
    <string name="calculate_cgpa">Calculate CGPA</string>
    <string name="total_hrs">Total Hrs</string>
    <string name="totalresult1">0.00</string>
    <string name="total_cps2">Total Cps</string>
    <string name="totalresult2">0.00</string>
    <string name="cummulative_gpa">Cummulative GPA</string>
    <string name="totalresult3">0.00</string>
</resources>
