<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/how_to_use"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/how"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/step_by_step_tutorial"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/check"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/circle_border"
                    android:text="@string/one"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/enter_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="20dp"
                android:text="@string/enternameinfo"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/circle_border"
                    android:text="@string/two"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/entergrade"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="20dp"
                android:text="@string/entercredit"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/circle_border"
                    android:text="@string/three"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/enter_your_course_credits"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginRight="20dp"
                android:text="@string/creditinfo"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/circle_border"
                    android:text="@string/four"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/optional"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/takinga"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/circle_border"
                    android:text="@string/five"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/entercurrenttotal"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/tocalculategpa"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>